# luxuryuniverseV2

./: .dockerignore  .env.test  .gitignore  DEVELOPERS.md  Dockerfile  README.md  add_cover_art_column.py  add_payment_config.py  add_pending_coins_column.py  add_user_columns.py  alembic_sqlite.ini  api_main.py  bot_instance.py  bot_log.txt  bot_main.py  check_api_redirect.py  check_boto.py  check_db.py  check_membership.py  check_queue_line_api.py  check_spotlight.py  check_users.py  config.py  create_notification_table.py  custom_types.py  database.py  debug_sessions.py  docker-compose.yml  docker-entrypoint.sh  event_service.py  extended_user_source.txt  fix_channels.py  frontend_log.txt  generate_certs.py  get_extended_user_source.py  inspect_client.py  inspect_comment_event.py  inspect_extended_user.py  inspect_goals.py  inspect_payment_config.py  (+38 more)
alembic/: env.py
api/: __init__.py  achievements_api.py  admin_api.py  auth.py  bot_api.py  economy_api.py  notification_api.py  paypal_api.py  proxy_api.py  queue_line_api.py  reviewer_api.py  search_api.py  session_api.py  soundcloud_api.py  spotify_api.py  spotlight_api.py  stripe_api.py  upload_api.py  user_api.py
cogs/: activity_cog.py  channel_creator_cog.py  economy_cog.py  gamification_cog.py  moderator_cog.py  queue_cog.py  reviewer_cog.py  submission_cog.py  tiktok_cog.py  user_cache_cog.py
frontend/: Dockerfile  build_log.txt  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
middleware/: rate_limit.py  request_id.py
playwright/: auth.py
services/: achievement_service.py  (+10 more)
(+179 files in other folders)
